syntax = "proto3";

package greet;

service GreetService{
  rpc Greet (GreetRequest) returns (GreetRespone) {}

  //stream
  rpc GreetManyTimes (GreetManyTimeRequest) returns (GreetManyTImeResponse){}
}

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetManyTimeRequest{
  Greeting greet = 1;
}

message GreetManyTImeResponse{
  string result = 1;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetRespone {
  string result = 1;
}

